# compass.nvim

./: CLAUDE.md  Cargo.nix  Cargo.toml  README.md  flake.nix
lua/compass/: init.lua  ui.lua
nix/: plugin.nix
plugin/: compass.lua
src/: frecency.rs  fuzzy.rs  lib.rs  project.rs  scanner.rs
