[package]
name = "compass_core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust core for compass.nvim — workspace-aware project navigation"

[lib]
name = "compass_core"
crate-type = ["cdylib"]

[dependencies]
nvim-oxi = { version = "0.5", features = ["neovim-0-10"] }
walkdir = "2"
nucleo-matcher = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
